*** WooCommerce Subscriptions Core Changelog ***

= 2.3.0 - 2022-xx-xx =
* Fix - Move One Time Shipping metabox fields to use the woocommerce_product_options_shipping_product_data hook introduced in WC 6.0.
* Dev - Define build tool version requirements for consistent development and build environments.

= 2.2.1 - 2022-08-25 =
* Fix - Fatal Error caused in rare cases where quantity is zero during renewal.

= 2.2.0 - 2022-08-03 =
* Fix - Update subscription address when changed with renewals on block checkout.

= 2.1.0 - 2022-06-06 =
* Fix - Fatal Error caused in rare cases where quantity is zero during renewal.

= 2.0.0 - 2022-05-20 =
* Dev - Retrieving users subscriptions order has been updated to use the WooCommerce specific APIs in WC_Subscriptions_Order.
* Dev - Deprecate the WC_Subscriptions_Order::get_meta() function. Use wcs_get_objects_property( $order, $meta_key, "single", $default ) instead.
* Dev - Update the wcs_get_objects_property() function to prevent calls to get_post_meta() on objects that support calling the get_meta() function.
* Dev - Remove the get_post_meta() call from WCS_Post_Meta_Cache_Manager::maybe_update_for_post_change().
* Dev - Replace code using get_post_type( $order_id ) with WC Data Store get_order_type().
* Dev - Replace all cases of update_post_meta() where an Order ID is passed to use WC_Order::update_meta_data() instead.

= 1.9.0 - 2022-04-27 =
* Fix: Display subscription billing details in the Cart Block when purchasing products with subscription plans created using the All Products extension. PR#149
* Dev: Update phpunit to v9 to allow testing against newer php versions. PR#140

= 1.8.0 - 2022-04-04 =
* Update: Switch to global functions to remove deprecation warnings originating from WooCommerce Blocks. PR#124

= 1.7.0 - 2022-03-18 =
* Fix: Sets up subscriptions integration with the Mini Cart Block and adds new hook to filter compatible blocks. PR#103